windows/Makefile: Add .exe extension to executables name.
Uses the same logic applied in 5b57ae985ff7064dd7b09b0ce891697bfaa5dae2
to determine when to add .exe.

See related: #3310, #3361, #3370, #4143, #5727.

--- a/ports/windows/Makefile
+++ b/ports/windows/Makefile
@@ -2,7 +2,7 @@ include ../../py/mkenv.mk
 -include mpconfigport.mk
 
 # define main target
-PROG = micropython.exe
+PROG = micropython
 
 # qstr definitions (must come before including py.mk)
 QSTR_DEFS = ../unix/qstrdefsport.h
