linux-kernel: Add threading support and make this port thread-safe.
Applies to any concurrent execution - including the hooks (which
were broken since the stack checks)

This isn't perfect, but it seems to do the basic job of allows
concurrent execution in SMP.

--- a/ports/linux-kernel/Makefile
+++ b/ports/linux-kernel/Makefile
@@ -108,6 +108,7 @@ CSUPEROPT = -O3
 
 SRC_C = \
 	main.c \
+	mpthreadport.c \
 	lib/utils/stdout_helpers.c \
 	lib/utils/interrupt_char.c \
 	lib/mp-readline/readline.c \
