linux-kernel: Add minimal "utime" module.
It's required in many tests, for the sleep() function.

--- a/ports/linux-kernel/Makefile
+++ b/ports/linux-kernel/Makefile
@@ -127,6 +127,8 @@ SRC_C = \
 	lib/utils/pyexec.c \
 	extmod/machine_mem.c \
 	extmod/moductypes.c \
+	modutime.c \
+	extmod/utime_mphal.c \
 	modkernel_ffi.c \
 	modmachine.c
 
