--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -74,6 +74,7 @@ set(MICROPY_SOURCE_PORT
     ${PROJECT_DIR}/esp32_nvs.c
     ${PROJECT_DIR}/esp32_partition.c
     ${PROJECT_DIR}/esp32_rmt.c
+    ${PROJECT_DIR}/esp32_pcnt.c
     ${PROJECT_DIR}/esp32_ulp.c
     ${PROJECT_DIR}/modesp32.c
     ${PROJECT_DIR}/machine_hw_spi.c
