--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -86,6 +86,7 @@ set(MICROPY_SOURCE_PORT
     machine_i2c.c
     machine_pin.c
     machine_pwm.c
+    machine_rtc.c
     machine_spi.c
     machine_timer.c
     machine_uart.c
@@ -113,6 +114,7 @@ set(MICROPY_SOURCE_QSTR
     ${PROJECT_SOURCE_DIR}/machine_i2c.c
     ${PROJECT_SOURCE_DIR}/machine_pin.c
     ${PROJECT_SOURCE_DIR}/machine_pwm.c
+    ${PROJECT_SOURCE_DIR}/machine_rtc.c
     ${PROJECT_SOURCE_DIR}/machine_spi.c
     ${PROJECT_SOURCE_DIR}/machine_timer.c
     ${PROJECT_SOURCE_DIR}/machine_uart.c
@@ -155,6 +157,7 @@ set(PICO_SDK_COMPONENTS
     pico_time
     pico_unique_id
     tinyusb_common
+    pico_util
     tinyusb_device
 )
 
