Switch from recommonmark to myst-parser
It's the *future* and fixes a doc build error.

Related to https://github.com/readthedocs/recommonmark/issues/221

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -15,9 +15,10 @@ cpp-coveralls
 # For docs
 Sphinx<4
 sphinx-rtd-theme
-recommonmark
+myst-parser
 sphinx-autoapi
 sphinxcontrib-svg2pdfconverter
+readthedocs-sphinx-search
 
 # For translate check
 polib
