--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,8 @@
 sphinx<4
-recommonmark==0.6.0
+myst-parser==0.14.0
 sphinxcontrib-svg2pdfconverter==0.1.0
 astroid
 sphinx-autoapi
 isort
 black
+readthedocs-sphinx-search
