--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,6 +178,7 @@ jobs:
         - "adafruit_itsybitsy_rp2040"
         - "adafruit_neokey_trinkey_m0"
         - "adafruit_proxlight_trinkey_m0"
+        - "adafruit_qt2040_trinkey"
         - "adafruit_qtpy_rp2040"
         - "adafruit_rotary_trinkey_m0"
         - "adafruit_slide_trinkey_m0"
