mimxrt/flash: Implementation of VFS.
Refactoring of linker scripts to accomodate reserved area for VFS.
VFS will take up most of the available flash. 1M is reserved for code.
9K is reserved for flash configuration, interrupts, etc.

All flashing related functions are stored in ITCM RAM.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -25,7 +25,7 @@ include $(TOP)/py/py.mk
 GIT_SUBMODULES = lib/tinyusb lib/nxp_driver
 
 MCU_DIR = lib/nxp_driver/sdk/devices/$(MCU_SERIES)
-LD_FILES = boards/$(MCU_SERIES).ld $(TOP)/$(MCU_DIR)/gcc/$(MCU_SERIES)xxxxx_flexspi_nor.ld
+LD_FILES = boards/$(BOARD)/$(BOARD).ld boards/$(MCU_SERIES).ld linker/common.ld
 
 # mcu driver cause following warnings
 #CFLAGS += -Wno-error=float-equal -Wno-error=nested-externs
@@ -53,7 +53,7 @@ CFLAGS += -DXIP_EXTERNAL_FLASH=1 \
 	-D__START=main \
 	-DCPU_HEADER_H='<$(MCU_SERIES).h>'
 
-LDFLAGS = $(addprefix -T,$(LD_FILES)) -Map=$@.map --cref
+LDFLAGS = $(addprefix -T,$(LD_FILES)) -Map=$@.map --cref --print-memory-usage
 LIBS = $(shell $(CC) $(CFLAGS) -print-libgcc-file-name)
 
 # Tune for Debugging or Optimization
