mimxrt/flash: Fixed incorrect ram code initialization.
Updated linker script and fixed LMA/VMA settings for ram code.
Enabled ram function copy operation in startup code.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -49,6 +49,7 @@ CFLAGS += -DCPU_$(MCU_SERIES) -DCPU_$(MCU_VARIANT)
 CFLAGS += -DXIP_EXTERNAL_FLASH=1 \
 	-DXIP_BOOT_HEADER_ENABLE=1 \
 	-DCFG_TUSB_MCU=OPT_MCU_MIMXRT10XX \
+	-D__STARTUP_INITIALIZE_RAMFUNCTION \
 	-D__STARTUP_CLEAR_BSS \
 	-D__START=main \
 	-DCPU_HEADER_H='<$(MCU_SERIES).h>'
