mimxrt/boards/TEENSY40: Re-create the flash FS after deploy.
This is required since the Teensy Halfkay loader attempts to erase all of
the flash but fails to do so, at least in my tests.  Formatting brings it
back to a known state.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -2,6 +2,8 @@ BOARD ?= TEENSY40
 BOARD_DIR ?= boards/$(BOARD)
 BUILD ?= build-$(BOARD)
 
+PORT ?= /dev/ttyACM0
+
 CROSS_COMPILE ?= arm-none-eabi-
 
 ifeq ($(wildcard $(BOARD_DIR)/.),)
