TEENSY40: Re-create the flash FS after deploy.
This is required since the Teensy halfkay loader attempts to
erase all of the flash but fails to do so, at least in my tests.
Even if that erase is unpleasant, having a known state is mandatory.
So formatting brings it back to a solid ground.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -3,6 +3,9 @@ BOARD_DIR ?= boards/$(BOARD)
 BUILD ?= build-$(BOARD)
 BOARD_LOADER ?= teensy_loader_cli
 
+PORT ?= /dev/ttyACM0
+MPREMOTE ?= mpremote
+
 CROSS_COMPILE ?= arm-none-eabi-
 
 ifeq ($(wildcard $(BOARD_DIR)/.),)
