mimxrt: Fixed MIMXRT1064 build.

--- a/ports/mimxrt/CMakeLists.txt
+++ b/ports/mimxrt/CMakeLists.txt
@@ -210,6 +210,7 @@ target_compile_definitions(${MICROPY_TARGET} PRIVATE
     XIP_EXTERNAL_FLASH=1
     XIP_BOOT_HEADER_ENABLE=1
     CFG_TUSB_MCU=OPT_MCU_MIMXRT10XX
+    ${BOARD_COMPILE_DEFINITIONS}
 )
 
 add_custom_command(TARGET ${MICROPY_TARGET}
