mimxrt: Provide a RTC module.
Initial version, using the LP rtc clock.
It provides setting the Date & Time with rtc.init() or rtc.datetime()
and reading date & time with rtc.datetime() or rtc.now().

If not battery is supplied, the default boot time/date is 1970/1/1 0:0:0.
With a battery, the clock continues to run even when the board is not
powered. The clock is quite precise. If not, using rtc.calibration()
may help.

Possible extension: set an alarm with alarm handler. For short periods
< 70 minutes this is also possible with the timer module,
for longer periods this may have to be done.

--- a/ports/mimxrt/Makefile
+++ b/ports/mimxrt/Makefile
@@ -122,6 +122,8 @@ SRC_C = \
 	machine_pin.c \
 	machine_timer.c \
 	mimxrt_flash.c \
+	machine_rtc.c \
+	$(MCU_DIR)/drivers/fsl_snvs_lp.c \
 	modutime.c \
 	modmachine.c \
 	modmimxrt.c \
@@ -137,7 +139,7 @@ SRC_C = \
 	lib/utils/sys_stdio_mphal.c \
 	$(SRC_TINYUSB_C) \
 	$(SRC_TINYUSB_IMX_C) \
-
+	
 SRC_SS = $(MCU_DIR)/gcc/startup_$(MCU_SERIES).S
 
 SRC_S = lib/utils/gchelper_m3.s \
@@ -148,6 +150,7 @@ SRC_QSTR += \
 	machine_pin.c \
 	machine_timer.c \
 	mimxrt_flash.c \
+	machine_rtc.c \
 	modutime.c \
 	modmachine.c \
 	modmimxrt.c \
