Adding Arduino Nano RP2040 Connect
Re-commiting to fix local GitHub config issues. Adding CircuitPython support for the Arduino Nano RP2040 Connect. Have tested all digital and analog I/O, I2C, onboard LSM6DSOX. Uses the AT25SF128A external flash.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -190,6 +190,7 @@ jobs:
         - "arduino_mkrzero"
         - "arduino_nano_33_ble"
         - "arduino_nano_33_iot"
+        - "arduino_nano_rp2040_connect"
         - "arduino_zero"
         - "bast_pro_mini_m0"
         - "bastble"
