esp32/boards: Only include tinyusb idf component if USB_ENABLED.
Signed-off-by: Braden Mars <bradenmars@bradenmars.me>

--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -143,7 +143,9 @@ elseif(IDF_TARGET STREQUAL "esp32c3")
     list(APPEND IDF_COMPONENTS riscv)
 elseif(IDF_TARGET STREQUAL "esp32s2")
     list(APPEND IDF_COMPONENTS esp32s2)
-    list(APPEND IDF_COMPONENTS tinyusb)
+    if(USB_ENABLED)
+        list(APPEND IDF_COMPONENTS tinyusb)
+    endif()
 elseif(IDF_TARGET STREQUAL "esp32s3")
     list(APPEND IDF_COMPONENTS esp32s3)
     list(APPEND IDF_COMPONENTS tinyusb)
